# sfml-template

./: CMakeLists.txt  README.md  Setup.bat
src/: main.cpp
